--- a/views/mainview/gui.ui
+++ b/views/mainview/gui.ui
@@ -1,130 +1,143 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>MainWindow</class>
-    <widget class="QMainWindow" name="MainWindow">
-        <property name="geometry">
-            <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>878</width>
-                <height>692</height>
-            </rect>
-        </property>
-        <property name="acceptDrops">
-            <bool>true</bool>
-        </property>
-        <property name="windowTitle">
-            <string>Media Management</string>
-        </property>
-        <widget class="QWidget" name="centralwidget">
-            <property name="sizePolicy">
-                <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                </sizepolicy>
-            </property>
-            <widget class="QPushButton" name="pushButton_renamer">
-                <property name="geometry">
-                    <rect>
-                        <x>40</x>
-                        <y>30</y>
-                        <width>91</width>
-                        <height>81</height>
-                    </rect>
-                </property>
-                <property name="text">
-                    <string>Renamer</string>
-                </property>
-            </widget>
-            <widget class="QPushButton" name="pushButton_editor_img">
-                <property name="geometry">
-                    <rect>
-                        <x>280</x>
-                        <y>30</y>
-                        <width>91</width>
-                        <height>81</height>
-                    </rect>
-                </property>
-                <property name="text">
-                    <string>Img Editor</string>
-                </property>
-            </widget>
-            <widget class="FileExplorerWidget" name="widget" native="true">
-                <property name="geometry">
-                    <rect>
-                        <x>20</x>
-                        <y>130</y>
-                        <width>831</width>
-                        <height>451</height>
-                    </rect>
-                </property>
-                <property name="sizePolicy">
-                    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                    </sizepolicy>
-                </property>
-            </widget>
-            <widget class="QPushButton" name="pushButton_tileview">
-                <property name="geometry">
-                    <rect>
-                        <x>160</x>
-                        <y>30</y>
-                        <width>91</width>
-                        <height>81</height>
-                    </rect>
-                </property>
-                <property name="text">
-                    <string>Tile View</string>
-                </property>
-            </widget>
-            <widget class="QPushButton" name="pushButton_gps">
-                <property name="geometry">
-                    <rect>
-                        <x>510</x>
-                        <y>30</y>
-                        <width>91</width>
-                        <height>81</height>
-                    </rect>
-                </property>
-                <property name="text">
-                    <string>GPS</string>
-                </property>
-            </widget>
-            <widget class="QPushButton" name="pushButton_editor_vid">
-                <property name="geometry">
-                    <rect>
-                        <x>400</x>
-                        <y>30</y>
-                        <width>91</width>
-                        <height>81</height>
-                    </rect>
-                </property>
-                <property name="text">
-                    <string>Vid Editor</string>
-                </property>
-            </widget>
-        </widget>
-        <widget class="QMenuBar" name="menubar">
-            <property name="geometry">
-                <rect>
-                    <x>0</x>
-                    <y>0</y>
-                    <width>878</width>
-                    <height>22</height>
-                </rect>
-            </property>
-        </widget>
-        <widget class="QStatusBar" name="statusbar"/>
-    </widget>
-    <customwidgets>
-        <customwidget>
-            <class>FileExplorerWidget</class>
-            <extends>QWidget</extends>
-            <header>management.widgets.h</header>
-            <container>1</container>
-        </customwidget>
-    </customwidgets>
-    <resources/>
-    <connections/>
+ <class>MainWindow</class>
+ <widget class="QMainWindow" name="MainWindow">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>878</width>
+    <height>692</height>
+   </rect>
+  </property>
+  <property name="acceptDrops">
+   <bool>true</bool>
+  </property>
+  <property name="windowTitle">
+   <string>Media Management</string>
+  </property>
+  <widget class="QWidget" name="centralwidget">
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <widget class="QPushButton" name="pushButton_renamer">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>30</y>
+      <width>91</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Renamer</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_editor_img">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>30</y>
+      <width>91</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Img Editor</string>
+    </property>
+   </widget>
+   <widget class="FileExplorerWidget" name="widget" native="true">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>130</y>
+      <width>831</width>
+      <height>451</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_tileview">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>30</y>
+      <width>91</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Tile View</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_gps">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>30</y>
+      <width>91</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>GPS</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_editor_vid">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>30</y>
+      <width>91</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Vid Editor</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_editor_face">
+    <property name="geometry">
+     <rect>
+      <x>620</x>
+      <y>30</y>
+      <width>91</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Face Editor</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>878</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QStatusBar" name="statusbar"/>
+ </widget>
+ <customwidgets>
+  <customwidget>
+   <class>FileExplorerWidget</class>
+   <extends>QWidget</extends>
+   <header>management.widgets.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
+ <resources/>
+ <connections/>
 </ui>
